[package]
name = "dungeon"
version = "0.1.0"
authors = ["Tom Streller <tom@streller.me>"]
edition = "2018"

[dependencies]
bevy = "0.5"
bevy_tilemap = { git = "https://github.com/joshuajbouw/bevy_tilemap.git", branch = "bevy_0.5" }
bracket-pathfinding = "0.8"
direction = { version = "0.18", features = ["serde", "rand"] }
log = "0.4"
rand = "0.8"
serde = "1.0"
