[package]
name = "dungeon"
version = "0.1.0"
authors = ["Tom Streller <tom@streller.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bevy = "0.5"
bevy_tilemap = "0.4"
bracket-pathfinding = "0.8"
direction = { version = "0.18", features = ["serde", "rand"] }
heron = { version = "0.5", default-features = false, features = ["2d"] }
log = "0.4"
rand = "0.8"
serde = "1.0"
